# brain2scalp

./: .gitignore  README.md  pyproject.toml
brain2scalp/: __init__.py
brain2scalp/cli/: formatters.py  main.py
brain2scalp/core/: __init__.py  atlas.py  mask.py  models.py  pipeline.py  projection.py  transform.py
brain2scalp/viz/: slice2d_view.py  view_3d.py
tests/: test_cli_helpers.py  test_formatters.py  test_mask.py  test_pipeline.py  test_projection.py  test_transform.py
