[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "brain2scalp"
version     = "0.2.0"
description = "Map MNI, Talairach or native-space brain coordinates to their nearest scalp entry point on NIfTI head scan"
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.10"

keywords = [
    "neuroscience", "MNI", "Talairach", "TMS", "tDCS",
    "scalp", "neuronavigation", "NIfTI", "cortex", "cortex2scalp",
    "neuroimaging"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nibabel>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["brain2scalp[viz,dev]"]

[project.scripts]
brain2scalp = "brain2scalp.cli.main:entry_point"

[project.urls]
Repository = "https://github.com/LeonardoPoliti/brain2scalp"
Issues     = "https://github.com/LeonardoPoliti/brain2scalp/issues"

# setuptools
[tool.setuptools.packages.find]
where = ["."]

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]

# ruff (linter + formatter)
[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]   # line length handled by formatter

# mypy
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
